--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -128,7 +128,8 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group">
-							<li class="list-group-item  text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="userInfo?.programming_skills && userInfo?.programming_skills .length">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="!userInfo?.programming_skills || !userInfo?.programming_skills .length">--</li>
 						</ul>
 					</div>
 				</div>
@@ -257,7 +258,7 @@
 				</div>
 			</div> -->
 			<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='0'">
-				<div class="row" *ngIf="userInfo?.end_to_end_implementation || userInfo?.end_to_end_implementation ==null ">
+				<div class="row" *ngIf="userInfo?.end_to_end_implementation !=null || userInfo?.end_to_end_implementation ==null ">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
 							<!--<li *ngIf="!isMultipleMatches" class=" list-group-item text-capitalize">{{"userProfile.endToEnd" | translate }}</li>
@@ -515,7 +516,8 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group">
-							<li class="list-group-item  text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="userInfo?.programming_skills && userInfo?.programming_skills .length">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="!userInfo?.programming_skills || !userInfo?.programming_skills .length">--</li>
 						</ul>
 					</div>
 				</div>
@@ -640,7 +642,7 @@
 				</div>
 			</div> -->
 			<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='1'">
-				<div class="row" *ngIf="userInfo?.end_to_end_implementation || userInfo?.end_to_end_implementation ==null ">
+				<div class="row" *ngIf="userInfo?.end_to_end_implementation !=null || userInfo?.end_to_end_implementation ==null ">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
 							<!--<li *ngIf="!isMultipleMatches" class=" list-group-item text-capitalize">{{"userProfile.endToEnd" | translate }}</li>
@@ -889,7 +891,8 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group">
-							<li class="list-group-item  text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="userInfo?.programming_skills && userInfo?.programming_skills .length">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="!userInfo?.programming_skills || !userInfo?.programming_skills .length">--</li>
 						</ul>
 					</div>
 				</div>
@@ -1014,7 +1017,7 @@
 				</div>
 			</div> -->
 			<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='2'">
-				<div class="row" *ngIf="userInfo?.end_to_end_implementation || userInfo?.end_to_end_implementation ==null ">
+				<div class="row" *ngIf="userInfo?.end_to_end_implementation !=null || userInfo?.end_to_end_implementation ==null ">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
 							<!--<li *ngIf="!isMultipleMatches" class=" list-group-item text-capitalize">{{"userProfile.endToEnd" | translate }}</li>
@@ -1261,7 +1264,8 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group">
-							<li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item text-capitalize" *ngIf="userInfo?.programming_skills && userInfo?.programming_skills .length">{{utilsHelperService.onConvertArrayToString(userInfo?.programming_skills)}} </li>
+							<li class="list-group-item  text-capitalize" *ngIf="!userInfo?.programming_skills || !userInfo?.programming_skills .length">--</li>
 						</ul>
 					</div>
 				</div>
@@ -1386,7 +1390,7 @@
 				</div>
 			</div> -->
 			<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation==''">
-				<div class="row" *ngIf="userInfo?.end_to_end_implementation || userInfo?.end_to_end_implementation ==null ">
+				<div class="row" *ngIf="userInfo?.end_to_end_implementation !=null || userInfo?.end_to_end_implementation ==null ">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
 							<!--<li *ngIf="!isMultipleMatches" class=" list-group-item text-capitalize">{{"userProfile.endToEnd" | translate }}</li>
