--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -111,6 +111,7 @@
 				</mat-form-field>
 				<app-control-messages [control]="t['job_locations']"></app-control-messages>
 				<small  id="jobLocationsErroe" class="text-danger" style="display:none;">{{'Field is required.'}}</small>
+				<span class="text-danger" *ngIf="errEuro">Select Valid Europian Country</span>
 			</div>	
 		</div>	
 		<div class="col-lg-4 col-md-6 matches-8">
