--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -50,6 +50,7 @@
         <input (ngModelChange)="keyPress()" numbersOnly formControlName="experience" type="text" class="form-control w-40 text-center" placeholder="+8">
         <app-control-messages [control]="f['experience']"></app-control-messages>
 		 <small *ngIf="totalExpError"  class="text-danger">Total is greater than SAP Experience</small>
+		 <small *ngIf="totalExpErrorZero"  class="text-danger">Experience Should Not Be Zero</small>
       </div>
     </div>
     <div class="col-lg-3 col-md-4 matches-6" *ngIf="childForm.value.personalDetails.entry==false" >
@@ -58,6 +59,7 @@
         <input (ngModelChange)="keyPress()" appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-50 text-center"  placeholder="+5">
         <app-control-messages [control]="f['sap_experience']"></app-control-messages>
 		 <small *ngIf="sapExpError" class="text-danger">SAP is not greater than Total Experience</small>
+		 <small *ngIf="sapExpErrorZero"  class="text-danger">Experience Should Not Be Zero</small>
       </div>
     </div>
     <div class="col-lg-4 col-md-4 matches-6">
