--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -38,7 +38,7 @@
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="((currentTabInfo.tabNumber != 4) && userInfo?.profile_completed===true)">
 		<div class="form-group">
-			<button [disabled]="!createCandidateForm.valid || checValue()===false ||  createCandidateForm.controls.jobPref.value.job_type.length==0" (click)="onToggleRegisterReview(true)" type="button"
+			<button [disabled]="!createCandidateForm.valid || checValue()===false ||  createCandidateForm.controls.jobPref.value.job_type.length==0 || createCandidateForm.controls.educationExp.value.experience < createCandidateForm.controls.educationExp.value.sap_experience" (click)="onToggleRegisterReview(true)" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext">
 				{{"shared.update" | translate }}
 			</button>
