--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -8,6 +8,7 @@
 				<input  (ngModelChange)="keyPress()"  numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
 				<app-control-messages [control]="f['experience']"></app-control-messages>
 				<small *ngIf="totalExpError"  class="text-danger">Total is greater than SAP Experience</small>
+				<small *ngIf="totalExpErrorZero"  class="text-danger">Experience Should Not Be Zero</small>		
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-4 matches-8"  *ngIf="!this.childForm.value.jobInfo.entry">
@@ -17,6 +18,7 @@
 				<input  (ngModelChange)="keyPress()"   numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
 				<app-control-messages [control]="f['sap_experience']"></app-control-messages>
 				<small *ngIf="sapExpError" class="text-danger">SAP is not greater than Total Experience</small>
+				<small *ngIf="sapExpErrorZero"  class="text-danger">Experience Should Not Be Zero</small>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-4 ">
