--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -72,7 +72,8 @@
 					  <option [value]="4" [selected]="item?.status == 4">Rejected</option>
 					</select>
 					</td>
-				  <td class="text-center text-blue"><a class="poin" (click)="openMessagePopup(item)"><i class="fas fa-file-alt"></i></a></td> 
+				  <td class="text-center text-blue" *ngIf="item?.job_posting?.status != 0 && item?.job_posting?.status != 3"><a class="poin" (click)="openMessagePopup(item)"><i class="fas fa-file-alt"></i></a></td> 
+				  <td class="text-center text-blue" *ngIf="item?.job_posting?.status == 0 || item?.job_posting?.status == 3"><a class="poin-no"><i class="fas fa-file-alt"></i></a></td>
 				  <!--<td class="text-center" *ngIf="validateStatus(item) == false && item?.invite_status != true && item?.status !=6 && item?.status !=5 && item?.status !=2 && item?.status !=4 && item?.status !=1 " (click)="openMessagePopupInviteLink(item,item?.status)"><a  class="text-green poin" ><i class="fas fa-envelope-open-text"></i></a></td>-->
 				  <td class="text-center" *ngIf="validateStatus(item) == false && item?.invite_status != true && item?.status !=6 && item?.status !=5 && item?.status !=2 && item?.status !=4 && item?.status !=1 && item?.status !=7 && item?.status !=8 && item?.status !=9 && item?.status !=10 && item?.job_posting?.status != 0 && item?.job_posting?.status != 3" (click)="openMeetingLinkPopup(item,item?.status)"><a  class="text-green poin" ><i class="fas fa-envelope-open-text"></i></a></td>
 				  <td class="text-center" *ngIf="(validateStatus(item) == true  ) && item?.status !=6 && item?.status !=5 &&item?.status !=1 && item?.status !=2 && item?.status !=4 "><a  class="text-danger poin"><i class="fas fa-envelope"></i></a></td>
