--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.css
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.css
@@ -38,15 +38,16 @@
 	display:block !important;
 }
 mat-form-field .mat-form-field-empty.mat-form-field-label, .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
-     display: none !important; 
+      display: none !important; 
 }
 /*:host::ng-deep  mat-form-field .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix .mat-chip-list-wrapper{
 	
 	border: 2px solid #ccd1d6 !important;
-	border-bottom: 3px solid #ccd1d6 !important;
+	 border-left: 2px solid #ccd1d6 !important; 
+	 border-right: 2px solid #ccd1d6 !important; 
    border-radius: 10px;
     min-height: 48px;
-    margin-top: -15px;
+    margin-top: -19px;
 }
 :host::ng-deep mat-form-field .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix{
 	padding-bottom :0.1rem !important;
