--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.css
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.css
@@ -13,3 +13,25 @@
     background-color: #ffc107;
     border-color: #ffc107;
 }
+.modal-header{
+	padding: 1rem;
+    border-radius: 5px;
+    background: #fbfbfb !important;
+    border-bottom: 1px solid #dee2e6;
+}
+.modal-header .close {
+    float: right;
+    font-size: 1.25rem;
+    font-weight: 800;
+    line-height: 1;
+    color: #a8a8a8;
+    text-shadow: unset;
+    opacity: .85;
+}
+.modal-header .modal-title {
+    margin-bottom: 0;
+    line-height: 1.25;
+    color: #385edf;
+    font-weight: 700;
+    font-size: 1rem;
+}
