--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -83,8 +83,8 @@
                 <!-- <a href="javascript:;" disabled style="cursor: no-drop;" *ngIf="item.status == 0 "  class="text-info mr-2"  data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a> -->
                 <a href="javascript:;"  *ngIf="item?.status != 0 "[routerLink]="['/employer/post-job']" [queryParams]="{id: item?.id}" class="text-info mr-2"  data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a>
 				<a  class="mr-2"  style="color:blue;" [routerLink]="['/employer/post-job']"  [queryParams]="{id: item?.id,status:'copy'}"  data-toggle="tooltip" title="Clone"><i class="far fa-clone"></i></a>
-                <a href="javascript:;" (click)="onDeleteJobConfirm(item, i)" class="text-danger"   data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></a>
-                
+                <a href="javascript:;" (click)="onDeleteJobConfirm(item, i)" class="text-danger mr-2"   data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                <a *ngIf="item?.status != 0" (click)="openshare(item?.id)" class="text-primary"  data-toggle="tooltip" title="Share" ><i class="fa fa-share-alt"></i></a>
                 </td>
               </tr>
             </ng-container>
@@ -113,7 +113,6 @@
     </div>
   </div>
 </section>
-
 <app-delete-modal
 *ngIf="isDeleteModalOpened"
 [typeOfModel]="'Job'"
@@ -140,4 +139,18 @@
       <button type="button" [disabled]="!statusGlossary" class="btn btn-primary" data-dismiss="modal" (click)="onStatusModelSubmit()"> {{"shared.submit" | translate}}</button>
     </div>
   </div>
+</ng-template>
+<ng-template #shareModal let-modal let-d="dismiss" *ngIf="isShareModel">
+  <div class="modal-content">
+        <div class="modal-header">
+			<h5 class="modal-title">Share with</h5>
+			<button  type="button" (click)="closeshare()" class="close" data-dismiss="modal" aria-label="Close">
+             <span aria-hidden="true">×</span>
+			</button>
+		  </div>
+		<div class="modal-body text-center">
+			<a href="{{linkedInUrl}}" target="_blank"><i class='fab fa-linkedin fa-3x'></i></a>
+		</div>
+		
+	</div>	
 </ng-template>
