--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -127,6 +127,20 @@
 	</div>	
 </ng-template>
 
+<ng-template *ngIf="nomatchmodel" #noMatchModal let-modal let-d="dismiss">
+	<div class="modal-content">
+		<div class="modal-body text-center">
+			<h1 class="text-danger mx-auto pt-4"><i class="fa fa-times-circle"></i></h1>
+			<h6 class="mt-3" style="font-size: 20px;"> No Matches Found </h6>
+		</div>
+		<div class="modal-footer">
+			<div class=" mx-auto">
+				<button type="button" class="btn btn-theme-green" (click)="closeNoMatch()"  data-dismiss="modal">{{"shared.ok" | translate}} </button>
+			</div>
+		</div>
+	</div>	
+</ng-template>
+
 <app-resume-selects
 [toggleresumeSelectModal]="toggleresumeSelectModal"
 *ngIf="toggleresumeSelectModal"
