mail to user for completing profile

--- a/admin/src/app/pages/jobseeker/jobseeker.component.html
+++ b/admin/src/app/pages/jobseeker/jobseeker.component.html
@@ -49,7 +49,8 @@
 														<th>Name</th>
 														<th>Title</th>
 														<th>Location</th>
-														<th>Actie Since</th>
+														<th>Active Since</th>
+														<th>Action</th>
 													</tr>
 												</thead>
 												<tbody>
