--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -131,7 +131,7 @@
 	<div class="modal-content">
 		<div class="modal-body text-center">
 			<h1 class="text-danger mx-auto pt-4"><i class="fa fa-times-circle"></i></h1>
-			<h6 class="mt-3" style="font-size: 20px;"> No Matches Found </h6>
+			<h6 class="mt-3" style="font-size: 20px;"> Job Not matched, Try someother job </h6>
 		</div>
 		<div class="modal-footer">
 			<div class=" mx-auto">
