--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -773,6 +773,38 @@ div.dataTables_wrapper div.dataTables_filter input {
     right: -5px;
     top: 0;
 }
+
+/*--//Form Styles--*/
+/*--Theme Modal Styles--*/
+.modal-content{
+	border-radius:0;
+	border: none;
+	margin-top:-10rem !important;
+}
+.modal-header {
+    padding: 0.85rem 0.95rem;
+    border-bottom: none;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    background-color: #1453ee;
+    background-image: linear-gradient(to bottom, #1453ee, #00beff);
+    color: #fff;
+}
+.modal-header .modal-title {
+    color: #fff !important;
+    font-size: 1.15rem;
+    font-weight: 700;
+}
+.myadmin-form textarea.form-control {
+    height: auto;
+}
+.modal-footer{
+	padding:1px !important;
+}
+.modal-body{
+	padding:16px !important;
+}
+/*--//Theme Modal Styles--*/
 /*--Form Styles--*/
 .myadmin-form label{
     color: #000;
@@ -793,4 +825,10 @@ div.dataTables_wrapper div.dataTables_filter input {
     font-size: .85rem;
 }
 /*--//Form Styles--*/
-
+.sendbtn{
+	padding: 0.25rem 0.5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+	background-color:#007bff !important;
+}
