remove manditory for salary

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="col-lg-4 col-md-6 matches-8 d-flex">
 			<div class=" form-group w-50">
-				<label>{{"shared.pay" | translate}}<span class="required-asterisk">*</span></label>
+				<label>{{"shared.pay" | translate}}</label>
 				<select formControlName="salary_type" class="form-control" name="job-type">
 					<option value="" selected="" disabled="">{{"shared.select" | translate}} {{"shared.pay" | translate}}</option>
 					<option [value]="0">Hourly </option>
