--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -71,15 +71,15 @@
                   </div>
                 </div>
 				<div class="col-lg-5 col-md-5 col-sm-5" >
-							<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
+							<ng-container *ngIf="postedJobsDetails?.salary_type == 0 && postedJobsDetails?.salary !== 0">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/ hr'}}</h6>
 								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true">{{"shared.negotiable" | translate}}</a>
 							</ng-container>
-							<ng-container *ngIf="postedJobsDetails?.salary_type ==1">
+							<ng-container *ngIf="postedJobsDetails?.salary_type ==1 && postedJobsDetails?.salary !== 0">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual'}}</h6>
 								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true"> {{"shared.negotiable" | translate}}</a>
 							</ng-container>
-							<ng-container *ngIf="postedJobsDetails?.salary_type ==2">
+							<ng-container *ngIf="postedJobsDetails?.salary_type ==2 && postedJobsDetails?.salary !== 0">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Monthly'}}</h6>
 								<a class="btn btn-smss btn-outline-blue btn-sm mr-1" href="javascript:;" style="position: absolute;top: 0px;left: 11rem;" *ngIf="postedJobsDetails?.negotiable ==true"> {{"shared.negotiable" | translate}}</a>
 							</ng-container>
