meta tag througn linked image and title check

--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -150,6 +150,8 @@
 		  </div>
 		<div class="modal-body text-center">
 			<a href="{{linkedInUrl}}" target="_blank"><i class='fab fa-linkedin fa-3x'></i></a>
+			<br>
+			<a  target="_blank" href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fwww.sapworld.io%2F%23%2F" rel="noreferrer"><i class='fab fa-linkedin fa-1x'></i></a>
 		</div>
 		
 	</div>	
