--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -151,7 +151,7 @@
 		<div class="modal-body text-center">
 			<a href="{{linkedInUrl}}" target="_blank"><i class='fab fa-linkedin fa-3x'></i></a>
 			<br>
-			<a href="https://www.linkedin.com/sharing/share-offsite/?url=http%3A%2F%2F149.56.180.254%2F%23%2Fuser%2Fjob-matches%2Fdetails%3Fid%3D37" target="_blank"><i class='fab fa-linkedin fa-1x'></i></a>
+			<a href="https://www.linkedin.com/sharing/share-offsite/?url=http%3A%2F%2F149.56.180.254%2F%23%2Femployer%2Fdashboard%3FactiveTab%3DpostedJobs" target="_blank"><i class='fab fa-linkedin fa-1x'></i></a>
 		</div>
 		
 	</div>	
