--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -1,5 +1,5 @@
 <!-- Sub Header Section -->
-<section class="sub-header">
+<section class="sub-header" *ngIf="!router.url.includes('admin')">
   <div class="container">
     <div class="row">
       <div class="col-lg-5">
