--- a/admin/src/app/pages/employers/employers.component.html
+++ b/admin/src/app/pages/employers/employers.component.html
@@ -116,3 +116,32 @@
 	</ng-template>
 		
     <!-- //Modal Section -->
+	
+	<!-- Modal Section -->
+		
+	<ng-template *ngIf="openmail" #emailModal let-modal let-d="dismiss">
+	<div class="modal-content" style="margin-top:-10rem !important;">
+	  <div class="modal-header">
+		<h5 class="modal-title" id="emailModalLabel">Mail</h5>
+		  <span class="modal-title" (click)="closemodelmail()" role="button">x</span>
+	  </div>
+	  <div class="modal-body">
+		<form class="myadmin-form" [formGroup]="emailform" (ngSubmit)="submitmail()">
+			<div class="form-group" style="margin-bottom: 0.5rem !important">
+				<label>Subject</label>
+				<input type="text" class="form-control" formControlName="subject" name="subject" placeholder="Enter Subject">
+			</div>
+			<div class="form-group" style="margin-bottom: 0.5rem !important">
+				<label>Messages</label>
+				<textarea class="form-control" rows="4" formControlName="message" name="message" placeholder="Enter Messages"></textarea>
+			</div>
+			<div class="modal-footer">
+		       <button [disabled]="!emailform.valid" type="submit" class="btn btn-sm btn-primary px-3 sendbtn">Send</button>
+	        </div>
+		</form>
+	  </div>
+	  
+	</div>
+	</ng-template>
+		
+    <!-- //Modal Section -->
