--- a/admin/src/app/pages/employers/employers.component.html
+++ b/admin/src/app/pages/employers/employers.component.html
@@ -104,9 +104,13 @@
 						<app-control-messages [control]="f['email']"></app-control-messages>
 					</div>
 					<div class="form-group">
-						<label>Phone Number</label>
+						<label>Phone Number *</label>
 						<input type="email" class="form-control" placeholder="Phone Number" formControlName="phone" name="phone">
+						<app-control-messages [control]="f['phone']"></app-control-messages>
 					</div>
+					<small class="text-danger" *ngIf="formError?.length > 0 && formError[0]?.field == 'account'">
+					  {{formError[0]?.rules[0]?.rule == 'unique' ? formError[0]?.rules[0]?.message : ''}}
+					</small>
 					<div class="modal-footer">
 				<button type="submit" [disabled]="!registerForm.valid" class="btn btn-sm btn-primary px-3"  >Add</button>
 			  </div>
