--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -69,7 +69,7 @@
           <div class="form-group">
             <label>{{"shared.companyUrl" | translate}} </label>
             <input formControlName="website" type="text" class="form-control" placeholder="www.wipro.com">
-            <!-- <app-control-messages [control]="f['website']"></app-control-messages> -->
+            <app-control-messages [control]="f['website']"></app-control-messages>
           </div>
           <div class="form-group">
             <label>{{"shared.mobileNumber" | translate}}</label>
